# fast_pzero

./: .coverage  comandos.txt  pyproject.toml
fast_pzero/: app.py
tests/: test_app.py
