[project]
name = "fast-pzero"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Lu",email = "ana.lima@maisinternet.net"}
]
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true 
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
pre_format = 'ruff check --fix'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_pzero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_pzero -vv'
post_test = 'coverage html'